--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1891,6 +1891,9 @@ video {
 .w-\[420px\] {
   width: 420px;
 }
+.w-\[43px\] {
+  width: 43px;
+}
 .min-w-\[320px\] {
   min-width: 320px;
 }
@@ -2752,6 +2755,22 @@ video {
 .bg-transparent {
   background-color: transparent;
 }
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+.bg-\[\#ffc900\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 201 0 / var(--tw-bg-opacity));
+}
 .bg-contain {
   background-size: contain;
 }
@@ -3493,6 +3512,22 @@ video {
 .text-teal-500 {
   --tw-text-opacity: 1;
   color: rgb(20 184 166 / var(--tw-text-opacity));
+}
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+.text-green-700 {
+  --tw-text-opacity: 1;
+  color: rgb(21 128 61 / var(--tw-text-opacity));
+}
+.text-\[\#7a4b0e\] {
+  --tw-text-opacity: 1;
+  color: rgb(122 75 14 / var(--tw-text-opacity));
 }
 .text-opacity-90 {
   --tw-text-opacity: 0.9;
